get_history_stocks.ipynb,futures_series.ipynb,get_stock_correlations.ipynb

--- a/barchartapi/get_stock_correlations.ipynb
+++ b/barchartapi/get_stock_correlations.ipynb
@@ -72,10 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DROPBOX_MARKET_DATA_DIR = expanduser('~/Dropbox/market_data')\n",
+    "# STOCKS_DIR = f'{DROPBOX_MARKET_DATA_DIR}/stocks'\n",
+    "# !ls {STOCKS_DIR}\n",
     "STOCKS_DIR = f'./temp_folder/stocks'\n",
     "try:\n",
     "    os.makedirs(STOCKS_DIR)\n",
-    "except Exception as e:\n",
+    "except:\n",
     "    pass"
    ]
   },
@@ -85,9 +88,8 @@
    "source": [
     "___\n",
     "### Create an instance of BcHist\n",
-    "1. select an enpoint prefix of free or paid\n",
-    "2. must set bar_type to minutes, hour or daily\n",
-    "3. must set interval\n",
+    "1. must set bar_type to minutes, hour or daily\n",
+    "2. must set interval\n",
     " * for minutes, set interval to 1, 5, 15, 30 or 60\n",
     " * for other types, see https://www.barchart.com/ondemand/api/getHistory"
    ]
@@ -106,20 +108,16 @@
     }
    ],
    "source": [
-    "# select and endpoint prefix\n",
-    "endpoint_prefix='free' # 'free' or 'paid'\n",
+    "# set this to 'free' or 'paid'\n",
+    "endpoint = 'free' # free or paid\n",
     "\n",
-    "# select a bartype and interval\n",
-    "# bar_type='minutes'\n",
-    "# interval=1\n",
-    "# bar_type='daily'\n",
-    "# interval=1\n",
-    "bar_type='minutes'\n",
-    "interval=30\n",
+    "# set the bar_type and the interval\n",
+    "bar_type='minutes' # minutes, daily, monthly\n",
+    "interval=30 # 1,5,15,30,60\n",
     "\n",
-    "# create an instance of BcHist\n",
-    "api_key = open(f'./temp_folder/{endpoint_prefix}_api_key.txt','r').read()\n",
-    "endpoint_type=f'{endpoint_prefix}_url'\n",
+    "# create an instance \n",
+    "api_key = open(f'./temp_folder/{endpoint}_api_key.txt','r').read()\n",
+    "endpoint_type=f'{endpoint}_url'\n",
     "bch = bcapi.BcHist(api_key, bar_type=bar_type, interval=interval,endpoint_type = endpoint_type)\n"
    ]
   },
@@ -132,16 +130,17 @@
     "\n",
     "#### Inputs\n",
     "On each call to BcHist.get_history, provide:\n",
+    " * a beginning yyyymmdd integer\n",
+    " * an ending yyyymmdd integer\n",
     " * a short name like:\n",
     "  * a stock symbol like: SPY,USO,IBM, etc\n",
     "  * a futures symbol like: CLJ18, GCG19, ESH17, etc\n",
-    " * a beginning yyyymmdd integer\n",
-    " * an ending yyyymmdd integer\n",
     "\n",
     "#### Outputs\n",
     "The get_history method will return a tuple, where:\n",
     " * tup[0] provides a status\n",
-    " * tup[1] provides a pandas DataFrame of data, or None"
+    "\n",
+    "* tup[1] provides a pandas DataFrame of data, or None"
    ]
   },
   {
@@ -153,33 +152,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_history: XLE BEGIN 2019-01-12 08:03:57.164572\n",
-      "get_history: XLE WRITING DATA 2019-01-12 08:03:57.623806\n",
-      "get_history: XLE END 2019-01-12 08:03:57.627052\n",
-      "get_history: SPY BEGIN 2019-01-12 08:03:57.627123\n",
-      "get_history: SPY WRITING DATA 2019-01-12 08:03:57.940195\n",
-      "get_history: SPY END 2019-01-12 08:03:57.943974\n",
-      "get_history: USO BEGIN 2019-01-12 08:03:57.944368\n",
-      "get_history: USO WRITING DATA 2019-01-12 08:03:58.245262\n",
-      "get_history: USO END 2019-01-12 08:03:58.250640\n",
-      "get_history: GLD BEGIN 2019-01-12 08:03:58.250751\n",
-      "get_history: GLD WRITING DATA 2019-01-12 08:03:58.658020\n",
-      "get_history: GLD END 2019-01-12 08:03:58.665030\n",
-      "get_history: XLU BEGIN 2019-01-12 08:03:58.665186\n",
-      "get_history: XLU WRITING DATA 2019-01-12 08:03:59.056807\n",
-      "get_history: XLU END 2019-01-12 08:03:59.062757\n"
+      "BYPASSING: XLE\n",
+      "BYPASSING: SPY\n",
+      "BYPASSING: USO\n",
+      "BYPASSING: GLD\n",
+      "BYPASSING: XLU\n"
      ]
     }
    ],
    "source": [
+    "#  set a date range\n",
+    "beg_yyyymmdd = 20181201\n",
+    "end_yyyymmdd = 20190109\n",
     "\n",
+    "# set up stocks to get\n",
+    "#   below are some example lists of stocks\n",
     "spydr_short_names = ['XLE','XLU','XLK','XLB','XLP','XLY','XLI','XLC','XLV','XLF']\n",
     "commodity_etf_short_names = ['USO','UNG','DBC','DBA','GLD','USCI']\n",
     "currency_etf_short_names = ['FXY','FXE','FXB','FXF','FXC','FXA']\n",
     "my_portfolio_short_names = ['XLE','SPY','USO','GLD','XLU']\n",
+    "\n",
+    "# set short_names to the desired list to get\n",
     "short_names = my_portfolio_short_names\n",
-    "beg_yyyymmdd = 20181201\n",
-    "end_yyyymmdd = 20190112\n",
     "\n",
     "for short_name in short_names:\n",
     "    sn_path = f'{STOCKS_DIR}/{short_name}.csv'\n",
@@ -239,41 +233,41 @@
        "    <tr>\n",
        "      <th>XLE</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.969503</td>\n",
-       "      <td>0.955771</td>\n",
-       "      <td>-0.172805</td>\n",
-       "      <td>0.568791</td>\n",
+       "      <td>0.976647</td>\n",
+       "      <td>0.960263</td>\n",
+       "      <td>-0.562698</td>\n",
+       "      <td>0.768358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SPY</th>\n",
-       "      <td>0.969503</td>\n",
+       "      <td>0.976647</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.893435</td>\n",
-       "      <td>-0.297334</td>\n",
-       "      <td>0.675616</td>\n",
+       "      <td>0.920393</td>\n",
+       "      <td>-0.616033</td>\n",
+       "      <td>0.818876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>USO</th>\n",
-       "      <td>0.955771</td>\n",
-       "      <td>0.893435</td>\n",
+       "      <td>0.960263</td>\n",
+       "      <td>0.920393</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.159030</td>\n",
-       "      <td>0.532540</td>\n",
+       "      <td>-0.643154</td>\n",
+       "      <td>0.794815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GLD</th>\n",
-       "      <td>-0.172805</td>\n",
-       "      <td>-0.297334</td>\n",
-       "      <td>-0.159030</td>\n",
+       "      <td>-0.562698</td>\n",
+       "      <td>-0.616033</td>\n",
+       "      <td>-0.643154</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.835103</td>\n",
+       "      <td>-0.894643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XLU</th>\n",
-       "      <td>0.568791</td>\n",
-       "      <td>0.675616</td>\n",
-       "      <td>0.532540</td>\n",
-       "      <td>-0.835103</td>\n",
+       "      <td>0.768358</td>\n",
+       "      <td>0.818876</td>\n",
+       "      <td>0.794815</td>\n",
+       "      <td>-0.894643</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -282,11 +276,11 @@
       ],
       "text/plain": [
        "          XLE       SPY       USO       GLD       XLU\n",
-       "XLE  1.000000  0.969503  0.955771 -0.172805  0.568791\n",
-       "SPY  0.969503  1.000000  0.893435 -0.297334  0.675616\n",
-       "USO  0.955771  0.893435  1.000000 -0.159030  0.532540\n",
-       "GLD -0.172805 -0.297334 -0.159030  1.000000 -0.835103\n",
-       "XLU  0.568791  0.675616  0.532540 -0.835103  1.000000"
+       "XLE  1.000000  0.976647  0.960263 -0.562698  0.768358\n",
+       "SPY  0.976647  1.000000  0.920393 -0.616033  0.818876\n",
+       "USO  0.960263  0.920393  1.000000 -0.643154  0.794815\n",
+       "GLD -0.562698 -0.616033 -0.643154  1.000000 -0.894643\n",
+       "XLU  0.768358  0.818876  0.794815 -0.894643  1.000000"
       ]
      },
      "execution_count": 6,
@@ -356,60 +350,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018-12-12T09:30:00-05:00</td>\n",
-       "      <td>63.49605</td>\n",
-       "      <td>265.5294</td>\n",
-       "      <td>11.100</td>\n",
-       "      <td>117.8200</td>\n",
-       "      <td>56.37121</td>\n",
+       "      <td>2018-12-10T09:30:00-05:00</td>\n",
+       "      <td>62.56477</td>\n",
+       "      <td>260.1508</td>\n",
+       "      <td>10.89</td>\n",
+       "      <td>117.88</td>\n",
+       "      <td>55.56803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018-12-12T10:00:00-05:00</td>\n",
-       "      <td>63.49605</td>\n",
-       "      <td>265.9470</td>\n",
-       "      <td>11.040</td>\n",
-       "      <td>117.8979</td>\n",
-       "      <td>56.38113</td>\n",
+       "      <td>2018-12-10T10:00:00-05:00</td>\n",
+       "      <td>62.53505</td>\n",
+       "      <td>260.8269</td>\n",
+       "      <td>10.97</td>\n",
+       "      <td>117.86</td>\n",
+       "      <td>55.70189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018-12-12T10:30:00-05:00</td>\n",
-       "      <td>63.64466</td>\n",
-       "      <td>266.5534</td>\n",
-       "      <td>11.065</td>\n",
-       "      <td>117.8346</td>\n",
-       "      <td>56.26213</td>\n",
+       "      <td>2018-12-10T10:30:00-05:00</td>\n",
+       "      <td>61.80191</td>\n",
+       "      <td>258.9801</td>\n",
+       "      <td>10.95</td>\n",
+       "      <td>117.74</td>\n",
+       "      <td>55.33005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018-12-12T11:00:00-05:00</td>\n",
-       "      <td>63.74374</td>\n",
-       "      <td>266.3944</td>\n",
-       "      <td>11.100</td>\n",
-       "      <td>117.7700</td>\n",
-       "      <td>56.14314</td>\n",
+       "      <td>2018-12-10T11:00:00-05:00</td>\n",
+       "      <td>61.37589</td>\n",
+       "      <td>258.1525</td>\n",
+       "      <td>10.91</td>\n",
+       "      <td>117.89</td>\n",
+       "      <td>55.29039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018-12-12T11:30:00-05:00</td>\n",
-       "      <td>63.64466</td>\n",
-       "      <td>266.8020</td>\n",
-       "      <td>11.060</td>\n",
-       "      <td>117.7500</td>\n",
-       "      <td>56.11340</td>\n",
+       "      <td>2018-12-10T11:30:00-05:00</td>\n",
+       "      <td>61.49478</td>\n",
+       "      <td>258.7490</td>\n",
+       "      <td>10.93</td>\n",
+       "      <td>117.83</td>\n",
+       "      <td>55.44904</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   timestamp       XLE       SPY     USO       GLD       XLU\n",
-       "0  2018-12-12T09:30:00-05:00  63.49605  265.5294  11.100  117.8200  56.37121\n",
-       "1  2018-12-12T10:00:00-05:00  63.49605  265.9470  11.040  117.8979  56.38113\n",
-       "2  2018-12-12T10:30:00-05:00  63.64466  266.5534  11.065  117.8346  56.26213\n",
-       "3  2018-12-12T11:00:00-05:00  63.74374  266.3944  11.100  117.7700  56.14314\n",
-       "4  2018-12-12T11:30:00-05:00  63.64466  266.8020  11.060  117.7500  56.11340"
+       "                   timestamp       XLE       SPY    USO     GLD       XLU\n",
+       "0  2018-12-10T09:30:00-05:00  62.56477  260.1508  10.89  117.88  55.56803\n",
+       "1  2018-12-10T10:00:00-05:00  62.53505  260.8269  10.97  117.86  55.70189\n",
+       "2  2018-12-10T10:30:00-05:00  61.80191  258.9801  10.95  117.74  55.33005\n",
+       "3  2018-12-10T11:00:00-05:00  61.37589  258.1525  10.91  117.89  55.29039\n",
+       "4  2018-12-10T11:30:00-05:00  61.49478  258.7490  10.93  117.83  55.44904"
       ]
      },
      "execution_count": 8,
@@ -429,11 +423,11 @@
     {
      "data": {
       "text/plain": [
-       "GLD    0.119333\n",
-       "XLE    0.349473\n",
-       "USO    0.517850\n",
-       "SPY    0.282906\n",
-       "XLU    0.233001\n",
+       "GLD    0.122897\n",
+       "XLE    0.368310\n",
+       "SPY    0.304023\n",
+       "USO    0.521594\n",
+       "XLU    0.239980\n",
        "dtype: float64"
       ]
      },
