better comments in get_stock_correlations.ipynb

--- a/barchartapi/get_stock_correlations.ipynb
+++ b/barchartapi/get_stock_correlations.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## get_stock_correlations - \n",
+    "1. Use the barchart api to retrieve stock historical data;\n",
+    "2. Create a correlation matrix from the historical data; \n",
+    "3. Get standard deviations from the historical data;\n",
+    "4. Create long/short position information for each security retrieved\n",
+    "5. Create a portolio VaR using all of the above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
@@ -26,19 +38,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "### Add to sys.path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Within the barchart_api module, references like:\n",
-    "\n",
-    "```from barchartapi import barchart_api```\n",
-    "\n",
-    "will not work"
+    "### Add to sys.path\n",
+    "Within the barchart_api module, references like: ```from barchartapi import barchart_api``` will not work unless you append to sys.path the following folders:\n",
+    "1. project working directory (which holds barchart_api.py),\n",
+    "2. project directory,\n",
+    "3. workspace directory."
    ]
   },
   {
