add more ipynb notebooks

--- a/barchartapi/get_history_stocks.ipynb
+++ b/barchartapi/get_history_stocks.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STOCKS_DIR = f'./temp_folder/stocks'\n",
+    "STOCKS_DIR = f'./temp_folder/stocks/daily'\n",
     "try:\n",
     "    os.makedirs(STOCKS_DIR)\n",
     "except Exception as e:\n",
@@ -153,21 +153,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_history: XLE BEGIN 2019-01-12 08:03:57.164572\n",
-      "get_history: XLE WRITING DATA 2019-01-12 08:03:57.623806\n",
-      "get_history: XLE END 2019-01-12 08:03:57.627052\n",
-      "get_history: SPY BEGIN 2019-01-12 08:03:57.627123\n",
-      "get_history: SPY WRITING DATA 2019-01-12 08:03:57.940195\n",
-      "get_history: SPY END 2019-01-12 08:03:57.943974\n",
-      "get_history: USO BEGIN 2019-01-12 08:03:57.944368\n",
-      "get_history: USO WRITING DATA 2019-01-12 08:03:58.245262\n",
-      "get_history: USO END 2019-01-12 08:03:58.250640\n",
-      "get_history: GLD BEGIN 2019-01-12 08:03:58.250751\n",
-      "get_history: GLD WRITING DATA 2019-01-12 08:03:58.658020\n",
-      "get_history: GLD END 2019-01-12 08:03:58.665030\n",
-      "get_history: XLU BEGIN 2019-01-12 08:03:58.665186\n",
-      "get_history: XLU WRITING DATA 2019-01-12 08:03:59.056807\n",
-      "get_history: XLU END 2019-01-12 08:03:59.062757\n"
+      "get_history: XLE BEGIN 2019-01-29 10:58:22.296504\n",
+      "get_history: XLE WRITING DATA 2019-01-29 10:58:22.796054\n",
+      "get_history: XLE END 2019-01-29 10:58:22.799654\n",
+      "get_history: XLU BEGIN 2019-01-29 10:58:22.800051\n",
+      "get_history: XLU WRITING DATA 2019-01-29 10:58:23.900678\n",
+      "get_history: XLU END 2019-01-29 10:58:23.903496\n",
+      "get_history: XLK BEGIN 2019-01-29 10:58:23.903592\n",
+      "get_history: XLK WRITING DATA 2019-01-29 10:58:24.177436\n",
+      "get_history: XLK END 2019-01-29 10:58:24.179721\n",
+      "get_history: XLB BEGIN 2019-01-29 10:58:24.179984\n",
+      "get_history: XLB WRITING DATA 2019-01-29 10:58:24.469181\n",
+      "get_history: XLB END 2019-01-29 10:58:24.471582\n",
+      "get_history: XLP BEGIN 2019-01-29 10:58:24.471643\n",
+      "get_history: XLP WRITING DATA 2019-01-29 10:58:24.773250\n",
+      "get_history: XLP END 2019-01-29 10:58:24.775702\n",
+      "get_history: XLY BEGIN 2019-01-29 10:58:24.776019\n",
+      "get_history: XLY WRITING DATA 2019-01-29 10:58:25.046961\n",
+      "get_history: XLY END 2019-01-29 10:58:25.049411\n",
+      "get_history: XLI BEGIN 2019-01-29 10:58:25.049479\n",
+      "get_history: XLI WRITING DATA 2019-01-29 10:58:25.353463\n",
+      "get_history: XLI END 2019-01-29 10:58:25.356007\n",
+      "get_history: XLC BEGIN 2019-01-29 10:58:25.356096\n",
+      "get_history: XLC WRITING DATA 2019-01-29 10:58:25.652951\n",
+      "get_history: XLC END 2019-01-29 10:58:25.656686\n",
+      "get_history: XLV BEGIN 2019-01-29 10:58:25.656768\n",
+      "get_history: XLV WRITING DATA 2019-01-29 10:58:25.985081\n",
+      "get_history: XLV END 2019-01-29 10:58:25.991615\n",
+      "get_history: XLF BEGIN 2019-01-29 10:58:25.991986\n",
+      "get_history: XLF WRITING DATA 2019-01-29 10:58:26.284519\n",
+      "get_history: XLF END 2019-01-29 10:58:26.287923\n"
      ]
     }
    ],
@@ -177,8 +192,8 @@
     "commodity_etf_short_names = ['USO','UNG','DBC','DBA','GLD','USCI']\n",
     "currency_etf_short_names = ['FXY','FXE','FXB','FXF','FXC','FXA']\n",
     "my_portfolio_short_names = ['XLE','SPY','USO','GLD','XLU']\n",
-    "short_names = my_portfolio_short_names\n",
-    "beg_yyyymmdd = 20181201\n",
+    "short_names = spydr_short_names\n",
+    "beg_yyyymmdd = 20001201\n",
     "end_yyyymmdd = 20190112\n",
     "\n",
     "for short_name in short_names:\n",
