--- a/barchartapi/get_stock_correlations.ipynb
+++ b/barchartapi/get_stock_correlations.ipynb
@@ -69,6 +69,28 @@
    "metadata": {},
    "source": [
     "___\n",
+    "### Refresh CSV files.  \n",
+    "* Set delete_old_csv_file to True if you want to re-retrieve the csv files that we use in the analysis\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# true will cause barchartapi to refetch csv data, \n",
+    "#   false will cause it to bypass any short_name that already has a csv file in the path sn_path below\n",
+    "delete_old_csv_file = False \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
     "### Create paths to where you will store the history data"
    ]
   },
@@ -184,10 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# true will cause barchartapi to refetch csv data, \n",
-    "#   false will cause it to bypass any short_name that already has a csv file in the path sn_path below\n",
-    "delete_old_csv_file = False \n",
-    "\n",
     "#  set a date range\n",
     "days_to_fetch = 120\n",
     "dt_end = datetime.datetime.now()\n",
@@ -366,7 +384,8 @@
     "var_days = 1\n",
     "spy_usual_daily_std = .16 \n",
     "port_std = (df_positions_3.position_var.astype(float).as_matrix().T @ df_corr.astype(float).as_matrix() @ df_positions_3.position_var.astype(float).as_matrix())**.5\n",
-    "port_var = port_variance**.5 * var_days**.5  * norm.ppf(VAR_CONFIDENCE) \n",
+    "# port_var = port_variance**.5 * var_days**.5  * norm.ppf(VAR_CONFIDENCE) \n",
+    "port_var = port_std * var_days**.5  * norm.ppf(VAR_CONFIDENCE) \n",
     "spy_curr_unit_var = float(df_std[df_std.symbol=='SPY'].stdev) * (var_days/256)**.5  * norm.ppf(VAR_CONFIDENCE) \n",
     "sp_dollar_equiv = port_var / spy_curr_unit_var \n",
     "\n"
@@ -389,13 +408,6 @@
    "source": [
     "## END"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
