futures_roll.py uses java Interactive brokers price server

--- a/barchartapi/futures_series.ipynb
+++ b/barchartapi/futures_series.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '/Library/Frameworks/Python.framework/Versions/3.6/lib/python36.zip', '/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6', '/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/lib-dynload', '/Users/bperlman1/Virtualenvs3/pyliverisk/lib/python3.6/site-packages', '/Users/bperlman1/Virtualenvs3/pyliverisk/lib/python3.6/site-packages/IPython/extensions', '/Users/bperlman1/.ipython', '../../barchartapi/barchartapi', '../../barchartapi', '../..']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -49,9 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'futures_series' from '/Users/bperlman1/Documents/billybyte/pyliverisk/barchartapi/barchartapi/futures_series.py'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "reload(futs)"
@@ -79,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +107,8 @@
     "temp_folder = './temp_folder'\n",
     "api_key = open(f'{temp_folder}/{api_key_type_prefix}_api_key.txt','r').read()\n",
     "commodity = 'CL'\n",
-    "start_year = 2008\n",
-    "end_year = 2018\n",
+    "start_year = 2019\n",
+    "end_year = 2019\n",
     "days = 40\n",
     "# bar_type = 'minutes'\n",
     "bar_type = 'daily'\n",
@@ -105,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,18 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-01-08 11:03:18,649 - root - INFO - start\n",
-      "2019-01-08 11:03:18,651 - root - INFO - days,month_codes (40, None)\n",
-      "2019-01-08 11:03:18,653 - root - INFO - begin:200801, end:200812\n",
-      "2019-01-08 11:03:18,654 - root - INFO - BEGIN Fetching Data for year: 2008\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:18,662 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
+      "2019-03-06 09:05:17,748 - root - INFO - start\n",
+      "2019-03-06 09:05:17,752 - root - INFO - days,month_codes (40, None)\n",
+      "2019-03-06 09:05:17,754 - root - INFO - begin:201901, end:201912\n",
+      "2019-03-06 09:05:17,755 - root - INFO - BEGIN Fetching Data for year: 2019\n",
+      "  0%|          | 0/12 [00:00<?, ?it/s]2019-03-06 09:05:17,819 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
      ]
     },
     {
@@ -158,200 +177,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-01-08 11:03:20,263 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20071201&symbol=CLF08&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
+      "2019-03-06 09:05:18,231 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20181201&symbol=CLF19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 2310\n",
+      "2019-03-06 09:05:18,240 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:18,522 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=40&interval=1&startDate=20181109&symbol=CLF19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 4929\n",
+      "  8%|▊         | 1/12 [00:00<00:08,  1.31it/s]2019-03-06 09:05:18,537 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:18,847 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20190101&symbol=CLG19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 2486\n",
+      "2019-03-06 09:05:18,856 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:19,175 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=40&interval=1&startDate=20181213&symbol=CLG19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 4576\n",
+      " 17%|█▋        | 2/12 [00:01<00:07,  1.41it/s]2019-03-06 09:05:19,191 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:19,496 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20190201&symbol=CLH19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 2318\n",
+      "2019-03-06 09:05:19,508 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:19,803 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=40&interval=1&startDate=20190111&symbol=CLH19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 4766\n",
+      " 25%|██▌       | 3/12 [00:02<00:06,  1.47it/s]2019-03-06 09:05:19,822 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:20,069 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20190301&symbol=CLJ19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 577\n",
+      "2019-03-06 09:05:20,078 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:20,341 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=40&interval=1&startDate=20190124&symbol=CLJ19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 4935\n",
+      " 33%|███▎      | 4/12 [00:02<00:05,  1.55it/s]2019-03-06 09:05:20,355 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n",
+      "2019-03-06 09:05:20,641 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20190401&symbol=CLK19&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
       "\n",
-      "2019-01-08 11:03:20,271 - root - INFO -  error getting contract CL for begin:200801 and end:200812 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:20,272 - root - INFO - begin:200901, end:200912\n",
-      "2019-01-08 11:03:20,273 - root - INFO - BEGIN Fetching Data for year: 2009\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:20,281 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:22,404 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20081201&symbol=CLF09&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:22,409 - root - INFO -  error getting contract CL for begin:200901 and end:200912 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:22,411 - root - INFO - begin:201001, end:201012\n",
-      "2019-01-08 11:03:22,412 - root - INFO - BEGIN Fetching Data for year: 2010\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:22,421 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:24,872 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20091201&symbol=CLF10&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:24,883 - root - INFO -  error getting contract CL for begin:201001 and end:201012 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:24,885 - root - INFO - begin:201101, end:201112\n",
-      "2019-01-08 11:03:24,889 - root - INFO - BEGIN Fetching Data for year: 2011\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:24,903 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:26,384 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20101201&symbol=CLF11&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:26,391 - root - INFO -  error getting contract CL for begin:201101 and end:201112 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:26,393 - root - INFO - begin:201201, end:201212\n",
-      "2019-01-08 11:03:26,395 - root - INFO - BEGIN Fetching Data for year: 2012\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:26,409 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:28,857 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20111201&symbol=CLF12&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:28,869 - root - INFO -  error getting contract CL for begin:201201 and end:201212 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:28,870 - root - INFO - begin:201301, end:201312\n",
-      "2019-01-08 11:03:28,872 - root - INFO - BEGIN Fetching Data for year: 2013\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:28,880 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:30,608 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20121201&symbol=CLF13&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:30,617 - root - INFO -  error getting contract CL for begin:201301 and end:201312 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:30,618 - root - INFO - begin:201401, end:201412\n",
-      "2019-01-08 11:03:30,620 - root - INFO - BEGIN Fetching Data for year: 2014\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:30,631 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:32,853 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20131201&symbol=CLF14&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:32,859 - root - INFO -  error getting contract CL for begin:201401 and end:201412 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:32,861 - root - INFO - begin:201501, end:201512\n",
-      "2019-01-08 11:03:32,862 - root - INFO - BEGIN Fetching Data for year: 2015\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:32,870 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:34,654 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20141201&symbol=CLF15&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:34,660 - root - INFO -  error getting contract CL for begin:201501 and end:201512 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:34,661 - root - INFO - begin:201601, end:201612\n",
-      "2019-01-08 11:03:34,661 - root - INFO - BEGIN Fetching Data for year: 2016\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:34,670 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:36,816 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20151201&symbol=CLF16&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:36,826 - root - INFO -  error getting contract CL for begin:201601 and end:201612 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:36,827 - root - INFO - begin:201701, end:201712\n",
-      "2019-01-08 11:03:36,828 - root - INFO - BEGIN Fetching Data for year: 2017\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:36,837 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:38,697 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20161201&symbol=CLF17&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:38,703 - root - INFO -  error getting contract CL for begin:201701 and end:201712 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:38,705 - root - INFO - begin:201801, end:201812\n",
-      "2019-01-08 11:03:38,707 - root - INFO - BEGIN Fetching Data for year: 2018\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]2019-01-08 11:03:38,718 - requests.packages.urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): marketdata.websol.barchart.com\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-01-08 11:03:41,156 - requests.packages.urllib3.connectionpool - DEBUG - https://marketdata.websol.barchart.com:443 \"GET /getHistory.json?maxRecords=60&interval=1&startDate=20171201&symbol=CLF18&type=daily&apikey=99125d367af268ca234144d64583a5e7 HTTP/1.1\" 200 85\n",
-      "\n",
-      "2019-01-08 11:03:41,162 - root - INFO -  error getting contract CL for begin:201801 and end:201812 single positional indexer is out-of-bounds\n",
-      "2019-01-08 11:03:41,164 - root - INFO - end\n"
+      "2019-03-06 09:05:20,645 - root - INFO -  error getting contract CL for begin:201901 and end:201912 {'code': 204, 'message': 'Success, but no content to return.'}\n",
+      "2019-03-06 09:05:20,647 - root - INFO - end\n"
      ]
     }
    ],
@@ -388,6 +233,26 @@
     "        logger.info(f' error getting contract {commodity} for begin:{str(beg_yyyymm)} and end:{str(end_yyyymm)} {str(e)}')\n",
     "logger.info(f'end')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/bperlman1/Documents/billybyte/pyliverisk/barchartapi/barchartapi/temp_folder'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath(output_folder)"
    ]
   },
   {
